--- a/index.css
+++ b/index.css
@@ -39,11 +39,11 @@
         }
         
         .house {
-            background: url(halloween3.gif);
+            background: url(halloween.gif);
             background-size: contain;
             background-repeat: no-repeat;
-            width: 100%;
-            height: 80vh;
+            width: 90%;
+            height: 90vh;
             box-sizing: border-box;
         }
         
@@ -52,7 +52,7 @@
                 margin-right: -700px;
             }
             40% {
-                margin-right: 30px;
+                margin-right: 5px;
             }
         }
         
@@ -60,8 +60,8 @@
             display: inline;
             width: 40%;
             float: right;
-            right: 50px;
-            animation: right 3.5s ease-in-out;
+            right: 0px;
+            animation: right 3s ease-in-out;
         }
         
         .intro_left {
@@ -203,7 +203,7 @@
             margin-top: -2.5%;
             margin-left: 42.4%;
             animation: spi 1s ease-in-out infinite;
-            animation-delay: 3.5s;
+            animation-delay: 3s;
         }
         
         @keyframes spi {
