--- a/index.css
+++ b/index.css
@@ -268,3 +268,74 @@
             height: 90vh;
             box-sizing: border-box;
         }
+        
+        .container4 {
+            position: relative;
+            display: inline-block;
+            margin-top: 10%;
+            width: 100%;
+            height: 50vh;
+            box-sizing: border-box;
+        }
+        
+        .game {
+            background: url(games.gif);
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 90%;
+            height: 90vh;
+            box-sizing: border-box;
+        }
+        
+        .footer {
+            box-sizing: border-box;
+            bottom: 0%;
+            margin-top: 8%;
+        }
+        
+        .f_svg {
+            width: 100%;
+            position: relative;
+            z-index: 100;
+        }
+        
+        .ouija {
+            background-image: url(ouija_c.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 15%;
+            height: 15vh;
+            box-sizing: border-box;
+            transform: translate(370%, 70%);
+        }
+        
+        .contact_me {
+            position: absolute;
+            display: inline-block;
+            z-index: 101;
+            box-sizing: border-box;
+            width: 100%;
+        }
+        
+        .contact_me h1 {
+            color: #000000;
+            margin-top: 8%;
+            margin-left: 2%;
+            font-size: 40px;
+            text-decoration: none;
+        }
+        
+        .black {
+            color: #000000;
+            box-sizing: border-box;
+            transform: translate(-10%, 280%);
+            font-weight: bolder;
+        }
+        
+        a {
+            text-decoration: none;
+        }
+        
+        a:hover {
+            text-decoration: underline #000000;
+        }
